Adicionado DockerFile Auth

--- a/app/Services/autenticacao/.vscode/tasks.json
+++ b/app/Services/autenticacao/.vscode/tasks.json
@@ -36,6 +36,63 @@
                 "${workspaceFolder}/autenticacao.service/autenticacao.service.csproj"
             ],
             "problemMatcher": "$msCompile"
+        },
+        {
+            "type": "docker-build",
+            "label": "docker-build: debug",
+            "dependsOn": [
+                "build"
+            ],
+            "dockerBuild": {
+                "tag": "autenticacao:dev",
+                "target": "base",
+                "dockerfile": "${workspaceFolder}/autenticacao.service/Dockerfile",
+                "context": "${workspaceFolder}",
+                "pull": true
+            },
+            "netCore": {
+                "appProject": "${workspaceFolder}/autenticacao.service/autenticacao.service.csproj"
+            }
+        },
+        {
+            "type": "docker-build",
+            "label": "docker-build: release",
+            "dependsOn": [
+                "build"
+            ],
+            "dockerBuild": {
+                "tag": "autenticacao:latest",
+                "dockerfile": "${workspaceFolder}/autenticacao.service/Dockerfile",
+                "context": "${workspaceFolder}",
+                "platform": "linux/amd64",
+                "pull": true
+            },
+            "netCore": {
+                "appProject": "${workspaceFolder}/autenticacao.service/autenticacao.service.csproj"
+            }
+        },
+        {
+            "type": "docker-run",
+            "label": "docker-run: debug",
+            "dependsOn": [
+                "docker-build: debug"
+            ],
+            "dockerRun": {},
+            "netCore": {
+                "appProject": "${workspaceFolder}/autenticacao.service/autenticacao.service.csproj",
+                "enableDebugging": true
+            }
+        },
+        {
+            "type": "docker-run",
+            "label": "docker-run: release",
+            "dependsOn": [
+                "docker-build: release"
+            ],
+            "dockerRun": {},
+            "netCore": {
+                "appProject": "${workspaceFolder}/autenticacao.service/autenticacao.service.csproj"
+            }
         }
     ]
 }
