--- a/.env
+++ b/.env
@@ -22,8 +22,8 @@ KONG_PWD=3MkPwv4tIOub
 # ==========
 # RabbitMQ
 # ==========
-RABBIT_USER=root
-RABBIT_PWD=51Ba54deroz2
+RABBIT_USER=admin
+RABBIT_PWD=admin
 
 # =============
 # SWAGGER FILE
