--- a/app/backend/icarus-backend.yml
+++ b/app/backend/icarus-backend.yml
@@ -34,6 +34,10 @@ services:
     image: k4im/estoque:${version}
     container_name: container_estoque
     restart: on-failure
+    environment:
+      - DB_CONNECTION=${connectionString}
+      - RABBIT_MQ_USER=${rabbit_user}
+      - RABBIT_MQ_PWD=${rabbit_pwd}
     networks:
       - icarus-network
       - rabbitMQ-network
@@ -50,6 +54,10 @@ services:
     image: k4im/projetos:${version}
     container_name: container_projetos
     restart: on-failure
+    environment:
+      - DB_CONNECTION=${connectionString}
+      - RABBIT_MQ_USER=${rabbit_user}
+      - RABBIT_MQ_PWD=${rabbit_pwd}
     networks:
       - icarus-network
       - rabbitMQ-network
@@ -66,6 +74,10 @@ services:
     image: k4im/autenticacao:${version}
     container_name: container_auth
     restart: on-failure
+    environment:
+      - DB_CONNECTION=${connectionString}
+      - RABBIT_MQ_USER=${rabbit_user}
+      - RABBIT_MQ_PWD=${rabbit_pwd}
     networks:
       - icarus-network
       - rabbitMQ-network
