--- a/app/backend/docker-compose.yml
+++ b/app/backend/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 
 services:
+
   icarus-db:
     image: mysql
     container_name: container_db
@@ -102,13 +103,35 @@ services:
         reservations:
           memory: 512M
 
+
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: container_broker
+    restart: on-failure
+    environment:
+    - RABBITMQ_DEFAULT_USER=${rabbit_user}
+    - RABBITMQ_DEFAULT_PASS=${rabbit_pwd}
+    hostname: broker
+    ports:
+        - 5672:5672
+        - 15672:15672
+    volumes:
+      - db-broker:/var/lib/rabbitmq
+    networks:
+      - rabbitMQ-network
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+
+# --------------------------
 # Volume utilizados para banco de dados mysql
 volumes:
   icarus-db:
 
-    # Network que serão utilizadas
-    # Será utilizado a network para o backend 
-    # e uma network external sendo para comunicação do rabbitMQ
+# Network que serão utilizadas
+# Será utilizado a network para o backend 
+# e uma network external sendo para comunicação do rabbitMQ
 networks:
   rabbitMQ-network:
     external: true
