Adicionado rabbit ao backend

--- a/app/backend/docker-compose.yml
+++ b/app/backend/docker-compose.yml
@@ -127,6 +127,7 @@ services:
 # Volume utilizados para banco de dados mysql
 volumes:
   icarus-db:
+  db-broker:
 
 # Network que serão utilizadas
 # Será utilizado a network para o backend 
