--- a/app/backend/docker-compose.yml
+++ b/app/backend/docker-compose.yml
@@ -83,6 +83,28 @@ services:
         reservations:
           memory: 512M
 
+  worker-estoque:
+    image: k4im/worker-estoque:${version}
+    container_name: worker-estoque
+    restart: on-failure
+    environment:
+      - DB_CONNECTION=${connection_string_projetos}
+      - RABBIT_MQ_USER=${rabbit_user}
+      - RABBIT_MQ_PWD=${rabbit_pwd}
+    networks:
+      - icarus-network
+      - rabbitMQ-network
+    depends_on:
+      - icarus-db
+      - rabbitmq
+    deploy:
+      resources:
+        limits:
+          cpus: "0.50"
+          memory: 1G
+        reservations:
+          memory: 512M  
+  
   projetos:
     image: k4im/projeto:${version}
     container_name: container_projetos
